<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeholder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".OneFragment">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/ic_person_black_24dp"
        app:civ_border_color="#000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/tv_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/profile_image"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@id/profile_image"
        android:text="@string/posts"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/profile_image"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@id/tv_post"
        android:text="@string/followers"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/profile_image"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@id/tv_followers"
        android:text="@string/following"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_post"
        android:layout_alignStart="@id/tv_post"
        android:layout_marginBottom="8dp"
        android:text="@string/post"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_followers"
        android:layout_alignStart="@id/tv_followers"
        android:layout_marginBottom="8dp"
        android:text="@string/follower"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_followings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_following"
        android:layout_alignStart="@id/tv_following"
        android:layout_marginBottom="8dp"
        android:text="@string/followings"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/tv_posts"
        android:layout_alignStart="@id/tv_post"
        android:layout_alignEnd="@id/tv_followings"
        android:layout_marginTop="8dp"
        android:background="#A9A9A9"
        android:text="@string/edit"
        android:textColor="#000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_alignStart="@id/profile_image"
        android:layout_marginBottom="4dp"
        android:text="@string/name"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_alignStart="@id/tv_name"
        android:layout_marginBottom="4dp"
        android:text="@string/bio"
        android:textColor="#000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_bio"
        android:layout_alignStart="@id/tv_bio"
        android:layout_marginBottom="16dp"
        android:text="@string/link"
        android:textColor="#135"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_link"
        android:layout_alignStart="@id/tv_link"
        android:layout_marginStart="14dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="4dp"
        android:drawableStart="@drawable/ic_apps_black_24dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingBottom="4dp" />

    <TextView
        android:id="@+id/tv_cp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_cp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/tv_cp"
        android:drawableStart="@drawable/ic_menu_black_24dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingBottom="4dp" />

    <TextView
        android:id="@+id/tv_cp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_cp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/tv_cp1"
        android:drawableStart="@drawable/ic_place_black_24dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingBottom="4dp" />

    <TextView
        android:id="@+id/tv_cp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_cp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/tv_cp2"
        android:drawableStart="@drawable/ic_contacts_black_24dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingBottom="4dp" />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_cp"
        android:layout_margin="2dp"
        android:columnCount="3"
        android:columnOrderPreserved="false"
        android:orientation="horizontal"
        android:rowCount="2">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/c" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/f" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/g" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/f" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/g" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/c" />
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:itemBackground="@android:color/black"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/navigation" />
</RelativeLayout>
